--- a/src/app/views/customer-quotes-list/customer-quotes-list.component.html
+++ b/src/app/views/customer-quotes-list/customer-quotes-list.component.html
@@ -75,3 +75,5 @@
     </tr>
   </tbody>
 </table>
+
+<p class="text-center text-secondary" *ngIf="customerQuotes.length == 0">There is no quotes registered for this customer.</p>
