--- a/src/app/views/deck-quote-edit/dqe-takeoff/dqe-takeoff.component.html
+++ b/src/app/views/deck-quote-edit/dqe-takeoff/dqe-takeoff.component.html
@@ -12,6 +12,9 @@
   <button type="button" class="btn m-2 d-flex flex-fill justify-content-center"
     [class.btn-primary]="menu == 'rainscape'" [class.btn-light]="menu != 'rainscape'"
     (click)="menu = 'rainscape'">RainScape</button>
+  <button type="button" class="btn m-2 d-flex flex-fill justify-content-center"
+    [class.btn-primary]="menu == 'extra-materials'" [class.btn-light]="menu != 'extra-materials'"
+    (click)="menu = 'extra-materials'">Extra Materials</button>
 </div>
 
 <!-- Footing -->
@@ -560,4 +563,47 @@
       </div>
     </div>
   </div>
+</div>
+
+
+<!-- Extra Materials -->
+<div *ngIf="menu == 'extra-materials'" class="mb-3">
+  <div class="d-flex justify-content-end mb-3">
+    <button class="btn btn-outline-primary " (click)="addExtraMaterial()">+ New</button>
+  </div>
+
+  <table class="table table-hover mb-3">
+    <thead>
+      <tr class="table-light">
+        <th class="text-center">#</th>
+        <th class="text-center" style="width: 60%;">Description</th>
+        <th class="text-center">Quantity</th>
+        <th class="text-center">Unit Cost</th>
+        <th class="text-center">Total</th>
+        <th class="text-center"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let material of deckQuote?.extraMaterials; let i = index">
+        <td>{{ i + 1 }}</td>
+        <td>
+          <input type="text" class="form-control form-control-sm" [(ngModel)]="material.desc">
+        </td>
+        <td class="text-center">
+          <input type="text" class="form-control form-control-sm" [(ngModel)]="material.price">
+        </td>
+        <td class="text-center">
+          <input type="text" class="form-control form-control-sm" [(ngModel)]="material.qty">
+        </td>
+        <td class="text-center">
+          <input type="text" class="form-control form-control-sm">
+        </td>
+        <td class="text-center">
+          <button class="btn btn-outline-danger btn-sm" (click)="removeExtraMaterial(material)">
+            <i class="bi bi-trash"></i>
+          </button>
+      </tr>
+    </tbody>
+  </table>
+
 </div>
